[project]
name = "automatizacion-facebook"
version = "0.1.0"
description = "Telegram bot built with Pyrogram, SQLAlchemy and Pydantic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram>=2.2.23",
    "sqlalchemy[asyncio]>=2.0.50,<2.1",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "structlog>=26.1,<27",
    "rich>=13",
    "tgcrypto2>=1.3.4",
    # Runtime deps of the vendored fb_unofficial engine (src/fb_unofficial).
    "httpx>=0.27",
    "cryptography>=42",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
bot = "bot.app:main"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.44",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.6.0",
    "pylint>=4.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot", "src/fb_unofficial"]

# --------------------------------------------------------------------------- #
# Ruff: linter + formatter                                                     #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# The vendored fb_unofficial engine has its own (laxer) lint config upstream;
# keep our strict rules (N/PL/C90/...) off it. force-exclude so the exclusion
# also applies when a path inside it is passed explicitly (e.g. editor hooks).
extend-exclude = ["src/fb_unofficial"]
force-exclude = true

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import sort, UP pyupgrade, B bugbear, SIM simplify,
# ASYNC async pitfalls, RUF ruff-native, N naming (OOP), C90 mccabe complexity
# (OOP/DRY smell), PL pylint (PLR2004 enforces the no-magic-values principle;
# PLR09xx flag oversized functions/classes).
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF", "N", "C90", "PL"]
ignore = ["E501"]            # line length is handled by the formatter
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]     # re-exports
# Tests favour explicit literals and long arrange/act blocks.
"tests/**" = ["B", "PLR2004", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# --------------------------------------------------------------------------- #
# ty: type checker (Astral)                                                    #
# --------------------------------------------------------------------------- #
[tool.ty.environment]
python-version = "3.12"
python-platform = "linux"
python = ".venv"
# `src` stays the import root so `import fb_unofficial` resolves, but only our
# own code is type-checked (see [tool.ty.src] below).
root = ["src"]

[tool.ty.src]
# Check our package and tests; the vendored fb_unofficial engine is resolved
# (for imports) but not type-checked here — it carries its own gate upstream.
include = ["src/bot", "tests"]
exclude = ["src/fb_unofficial"]
respect-ignore-files = true

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.terminal]
output-format = "concise"
error-on-warning = false

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

# --------------------------------------------------------------------------- #
# pylint: used only as a DRY (copy/paste) detector via the duplicate-code      #
# checker; everything else is disabled because ruff/ty own the rest.           #
# --------------------------------------------------------------------------- #
[tool.pylint.similarities]
min-similarity-lines = 8
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
